corrections alignements des thumbs

--- a/src/components/landingHousingGallery/landingHousingGallery.scss
+++ b/src/components/landingHousingGallery/landingHousingGallery.scss
@@ -1,6 +1,6 @@
 .housingBackground {
     margin: 25px auto;
-    padding: 50px 25px;
+    padding: 50px 35px;
     background-color: #F6F6F6;
     border-radius: 25px;
     display: flex;
